--- a/wars.html
+++ b/wars.html
@@ -29,7 +29,7 @@
 
     <dt>Russian Civil War</dt>
     <a href="https://en.wikipedia.org/wiki/Red_Army"><img src="russian.jpg" alt="red army soldiers"></a>
-    <dd><a href="https://en.wikipedia.org/wiki/Russian_Civil_War">The Russian Civil</a>The Russian Civil War was a multi-party civil war in the former Russian Empire sparked by the overthrowing of the social-democratic Russian Provisional Government in the October Revolution, as many factions vied to determine Russia's political future. It resulted in the formation of the Russian Socialist Federative Soviet Republic and later the Union of Soviet Socialist Republics in most of its territory. Its finale marked the end of the Russian Revolution, which was one of the key events of the 20th century.</dd>
+    <dd><a href="https://en.wikipedia.org/wiki/Russian_Civil_War">The Russian Civil War</a> was a multi-party civil war in the former Russian Empire sparked by the overthrowing of the social-democratic Russian Provisional Government in the October Revolution, as many factions vied to determine Russia's political future. It resulted in the formation of the Russian Socialist Federative Soviet Republic and later the Union of Soviet Socialist Republics in most of its territory. Its finale marked the end of the Russian Revolution, which was one of the key events of the 20th century.</dd>
 
     <dt>Gulf War</dt>
     <a href="https://en.wikipedia.org/wiki/Middle_East#:~:text=Mass%20production%20of%20oil%20began,dominated%20by%20Middle%20Eastern%20countries."><img src="Iraqi_T-72_tanks.jpg" alt="iraqi tank units"></a>
